assets/responsive.css
/* ... */
@media only screen and (min-width: 600px) {
  .desktop-hidden {
    display: none !important;
  }
}



.slick-list.draggable {
  padding-bottom: 7rem;
}

@media only screen and (max-width: 1025px) {
  .header__grid.flex {
    display: grid !important;
    grid-template-columns: 1fr auto 1fr;
    align-items: center;
    row-gap: 0;
  }

  .header .main-menu {
    display: inline-flex;
    align-items: center;
    gap: 1rem;
    grid-column: 1;
    grid-row: 1;
    justify-self: start;
    order: 0;
    padding-top: 0;
    width: auto;
  }

  .header .main-menu__disclosure {
    display: block;
    order: 0;
  }

  .header .main-menu__toggle {
    margin-inline-end: 0;
  }

  .header .main-menu__toggle--svg::before,
  .header .main-menu__toggle--svg::after,
  .header .main-menu__toggle--svg .main-menu__toggle-icon::before,
  .header .main-menu__toggle--svg .main-menu__toggle-icon::after {
    display: none;
  }

  .header .main-menu__toggle--svg {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    position: relative;
  }

  .header .main-menu__toggle--svg .main-menu__toggle-icon {
    display: inline-flex;
    width: 21px;
    height: 14px;
    line-height: 0;
    opacity: 1;
    transition: opacity 1000ms;
  }

  .header .main-menu__toggle--svg .main-menu__toggle-icon svg {
    display: block;
    width: 21px;
    height: 14px;
  }

  .header .main-menu__toggle--svg .main-menu__toggle-icon--close {
    position: absolute;
    top: 50%;
    left: 50%;
    display: inline-flex;
    width: 21px;
    height: 21px;
    opacity: 0;
    pointer-events: none;
    transform: translate(-50%, -50%);
  }

  .header .main-menu__toggle--svg .main-menu__toggle-icon--close svg {
    width: 21px;
    height: 21px;
  }

  .header .main-menu__disclosure.is-open .main-menu__toggle-icon--menu {
    opacity: 0;
  }

  .header .main-menu__disclosure.is-open .main-menu__toggle-icon--close {
    opacity: 1;
  }

  .header .main-menu__mobile-search {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    order: 1;
    padding: 0.4rem;
    position: relative;
  }

  .header .main-menu__mobile-search > .icon-search {
    opacity: 1;
    transition: opacity var(--header-transition-speed);
  }

  .header .main-menu__mobile-search-close {
    position: absolute;
    top: 50%;
    left: 50%;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    line-height: 0;
    opacity: 0;
    pointer-events: none;
    transform: translate(-50%, -50%) scale(1.35);
    transform-origin: center;
    transition: opacity var(--header-transition-speed);
  }

  .header .main-menu__mobile-search-close svg {
    width: 1.35rem;
    height: 1.35rem;
  }

  @media only screen and (max-width: 768px) {
    .header .main-menu__mobile-search-close svg {
      width: 1.2rem;
      height: 1.2rem;
    }
  }

  .header:not(.search-is-collapsed) .main-menu__mobile-search > .icon-search {
    opacity: 0;
  }

  .header:not(.search-is-collapsed) .main-menu__mobile-search-close {
    opacity: 1;
  }

  .header__logo {
    grid-column: 2;
    grid-row: 1;
    justify-self: center;
    padding-inline: 0.8rem;
    margin: 0;
  }

  .header__desktop-right,
  .header__desktop-right-main {
    display: contents;
  }

  .header__desktop-right .header__utility--ghost {
    display: none;
  }

  .header__icons {
    grid-column: 3;
    grid-row: 1;
    justify-self: end;
    margin-inline-end: 0;
  }

  .header__search {
    grid-column: 1 / -1;
    grid-row: 2;
    order: 3;
  }
}

